Add build number

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: panache
 description: Flutter Material Theme editor
-version: 0.1.0
+version: 0.1.0+1
 author: Erick Ghaumez <erick@rxla.bz>
 homepage: https://github.com/rxlabz/panache
 
