--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   google_sign_in: ^3.2.4
   googleapis: ^0.52.0+1
   shared_preferences: ^0.4.3
-
+  mono_kit: ^0.5.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
